--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.ms.ssw.ssw.mobile'
-    compileSdk 34
+    compileSdk 33 // Updated from 30 to 31 (still conservative)
 
     defaultConfig {
         applicationId "com.ms.ssw.ssw.mobile"
-        minSdk 27
-        targetSdk 34
+        minSdk 23
+        targetSdk 33 // Updated from 30 to 31
         versionCode 1
         versionName "1.0"
 
@@ -22,6 +22,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,10 +30,9 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1' // Slightly older but more stable
+    implementation 'com.google.android.material:material:1.9.0' // Updated to stable version
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5' // Updated test libraries
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
